[fine-header-e-jumbo]

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/style.css">
   <title>Document</title>
 </head>
@@ -13,31 +14,35 @@
     <nav class="prop-flex">
       <ul class="prop-flex">
         <li><a href=""><img src="img/logo-small.png" alt="Dropbox"></a></li>
-        <li><a href="">1</a></li>
-        <li><a href="">2</a></li>
-        <li><a href="">3</a></li>
+        <li><a href="">Perchè Dropbox?</a></li>
+        <li><a href="">Funzioni</a></li>
+        <li><a href="">Piani e prezzi</a></li>
       </ul>
       <ul class="prop-flex">
-        <li><a href="">1</a></li>
-        <li><a href="">2</a></li>
-        <li><a href="">3</a></li>
-        <li><button>Inizia</button></li>
+        <li><a href="">Supporto</a></li>
+        <li><a href="">Contatta l'ufficio vendite</a></li>
+        <li><a href="">Accedi</a></li>
+        <li><button class="button-blue">Inizia</button></li>
       </ul>
     </nav>
   </header>
 
   <div class="jumbotron ">
     <div class="container-big">
-      <h1>Tutto ciò che ti derve per il lavoro, in un unico posto</h1>
-      <div class="container-big prop-flex">
+      <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+      <div class="prop-flex">
+        <div class="widht-80">
+          <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente
+          </p>
+          <button class="button-blue">Inizia la prova gratuita</button>
+          <div>annulla in qualsiasi momento </div>
+          <i class="fa-sharp fa-solid fa-arrow-down"></i>
+        </div>
         <div>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, commodi. Labore cumque accusantium earum? Debitis odio fuga fugiat eius numquam facere, cum quasi quos nisi qui repudiandae dolore beatae impedit!</p>
-          <button>Inizia la prova gratuita</button>
-          <span>annulla</span>
-          <i>&euml;</i>
+          <img src="img/jumbo.png" alt="window-dropbox">
         </div>
-        <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde illum consequuntur vitae corporis debitis molestiae facere, dolorum, optio ab eligendi dolorem cupiditate et, blanditiis nostrum nobis quisquam deserunt. Minus, consequatur.<img src="" alt="">
-        </div>
+      
+      </div>
      </div>
     </div>
   </div>
@@ -45,12 +50,46 @@
   <main>
     <div class="container-small top">
      <h2>Trova il piano Dropbox Business che far per te </h2> 
-     <input type="radio">
-     <input type="radio">
+     <input class="margin" type="radio"  name="choice" value="Fatturazione"> Fatturazione mensile
+     <input class="margin" type="radio"  name="choice" value="annuale">Fatturazione annuale
      <div class="prop-flex three-column">
        <section class="border">
-         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate cupiditate eaque cumque voluptatibus iste quasi quas saepe, nam consequuntur ullam. Laboriosam iste mollitia distinctio doloribus, laborum consequuntur qui amet sed?
-         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores autem, quae amet accusamus laboriosam voluptatum qui blanditiis praesentium soluta error saepe maxime ipsa aspernatur quidem omnis exercitationem totam? Neque assumenda hic molestias itaque quod dolor natus porro unde eius nulla a in similique, magni vitae facilis consectetur ipsum modi qui. Perferendis saepe pariatur iusto voluptatum praesentium esse sequi sapiente dolores tempora. Saepe adipisci aspernatur dicta mollitia voluptatem consectetur. Facere aliquid quidem ad dolor alias animi consectetur cupiditate autem dolorem vero nihil sint non natus, amet totam dolores eaque tempora voluptatum. Nostrum cumque quisquam voluptatum ad sunt commodi? Totam, molestias iure! Vitae, a? Ad aut, quae repellendus reiciendis deleniti harum excepturi, minima neque libero veniam dolore exercitationem voluptas voluptatibus delectus provident reprehenderit earum beatae ab sint dicta! Qui, inventore tempore deserunt ab voluptatibus provident eum tempora alias ea ipsa adipisci nobis pariatur distinctio consequatur sunt voluptas quis maiores soluta quos commodi. Earum dicta temporibus aspernatur aliquam maiores, exercitationem aliquid assumenda! Velit fuga non voluptatem veniam voluptate quia architecto asperiores quibusdam doloremque. Laudantium consequatur obcaecati corporis et. Tempora nam consequuntur et ullam molestias quia numquam deleniti fugit, iste rerum architecto laborum! Earum debitis non doloremque corrupti, asperiores voluptatem sapiente? Quisquam accusantium repellendus debitis cumque inventore voluptatibus rerum, molestias saepe veritatis sit dolor. Blanditiis rem maxime, et ducimus, modi dicta adipisci ratione numquam, incidunt doloremque laborum repudiandae quisquam nostrum odit. Dolor porro saepe maxime maiores odit, suscipit hic! Exercitationem iure cum quaerat aliquam temporibus, autem molestias ab assumenda perferendis quisquam consequuntur quod illo veniam tenetur inventore asperiores sit praesentium voluptatibus, nulla dignissimos qui nemo! Vitae nisi nesciunt saepe quisquam, facilis, odio laboriosam dicta molestiae magni pariatur beatae animi! Dolorem illum saepe harum adipisci impedit, quo omnis, enim aspernatur ipsum voluptatum laborum expedita quidem voluptatibus tenetur, vel temporibus exercitationem sunt? Incidunt ipsum aliquam illo qui optio veniam. Voluptatem aperiam fugiat deserunt culpa eum quaerat reprehenderit quos veritatis quibusdam suscipit perspiciatis, laudantium amet corporis quidem odio quod magnam esse veniam at eius ipsum neque iusto officia. Dignissimos voluptatem accusantium eveniet! Non quas tempore harum inventore, labore ipsa facilis sequi libero cupiditate, commodi consequatur maxime dolorem nam ut alias natus aliquid unde eveniet impedit minus voluptas sed. Dolorum modi consectetur impedit ea, esse officiis magnam deserunt vel quae nobis eveniet praesentium mollitia excepturi itaque iure numquam ipsam, adipisci error consequuntur iusto tempore optio illum! Assumenda harum temporibus corporis. Exercitationem, asperiores praesentium! Quis, ipsum accusamus? Dicta, adipisci eius harum vero corrupti facilis aliquam commodi consectetur libero mollitia. Quae beatae sapiente neque culpa, doloribus eius quo illum animi sint vitae maxime quod ullam, quas, nostrum veritatis rerum! Commodi eius quibusdam, obcaecati adipisci facere ipsa repellendus unde, laudantium a aperiam distinctio harum consequatur. Quo, repellat libero? Suscipit corporis tempora reprehenderit molestias voluptates beatae quisquam nihil corrupti temporibus ipsam, ea quaerat laboriosam dolore rem cupiditate fugiat ducimus voluptate! Aspernatur possimus officia nostrum exercitationem quis odit nihil obcaecati sequi eligendi reprehenderit id fugiat voluptatum necessitatibus inventore assumenda, eaque dignissimos iusto, eius ab. Illo repellendus unde molestias suscipit omnis? Fuga dolor iusto ducimus veritatis nesciunt amet error. Aliquid autem, quae quis consequuntur sint exercitationem natus illum, aspernatur rem corrupti facilis sit architecto eum blanditiis voluptatem fugiat in iure voluptatum cumque doloribus voluptates maxime amet? Totam architecto atque deserunt? Reprehenderit aspernatur molestiae eligendi ipsam tempora beatae nostrum quidem autem dolores? Laborum assumenda numquam officiis, consectetur dignissimos id voluptatibus veniam? Aspernatur adipisci labore dolore facilis, qui praesentium dolor ab distinctio, ad molestias, sequi unde quos magni? Dicta voluptatibus fuga voluptates quo! Obcaecati rerum voluptates minima exercitationem, tenetur illum nisi soluta accusamus eligendi esse aliquid omnis maiores perferendis ut possimus qui. Delectus nam, nesciunt officiis animi blanditiis ea sit earum ullam, eius explicabo, minus ducimus a illum praesentium corporis alias quam illo quae dolor harum reprehenderit eum? Atque asperiores sequi corrupti incidunt a vel quis animi magni veritatis beatae nesciunt, esse maxime amet laboriosam ducimus ea saepe? Molestias aliquid veritatis nam omnis tempora aspernatur sequi incidunt qui assumenda eligendi consectetur itaque, necessitatibus eius, expedita optio odio voluptatibus autem natus vitae modi numquam. Quibusdam explicabo laboriosam aliquid autem vitae voluptate maiores amet numquam. Tempora autem reiciendis nulla quasi ipsa animi ut beatae dignissimos, commodi explicabo provident, in incidunt sint ipsam exercitationem? Delectus amet molestias vel fugit nam impedit quas sed illo molestiae at quo officia consequuntur, accusantium aperiam inventore, labore natus eaque. Placeat, nemo ad! Laboriosam ad libero eligendi excepturi. Vitae suscipit sapiente quaerat numquam repudiandae dignissimos eos doloribus dicta fuga? Error tempore earum voluptatibus facilis et dolore possimus numquam ratione aliquid harum, aut, sed laborum. Illo ad dolores voluptate! Esse consequuntur facilis facere, autem nam, ducimus laborum culpa, aspernatur sed totam aut aperiam quidem corporis alias soluta sunt voluptate rem fuga a! Velit dolor ipsum quae maxime in quo facilis consequuntur praesentium rerum amet, dolore temporibus illum, necessitatibus ab officia voluptates magni eveniet iure eius atque nostrum impedit illo natus. Ullam fugiat accusantium aliquam voluptates dolorem obcaecati vel numquam nulla quod odit deserunt, cumque error deleniti fuga ut, dolor, nihil officia dicta assumenda eveniet aperiam rerum? Id soluta voluptatum porro quae itaque nulla iusto ad doloribus inventore, incidunt molestias laboriosam iure alias magnam qui? Iure hic ex sit laboriosam repudiandae non perspiciatis enim, rem perferendis veniam molestiae illo alias officia autem nostrum. Ratione accusamus, molestiae similique unde, rem fugiat in repudiandae quasi fuga veritatis assumenda? Nesciunt voluptates nisi quos incidunt velit magnam pariatur facilis. Provident consequatur veniam similique, pariatur soluta aperiam sed dolorem, voluptas placeat dolorum dolores officiis cumque quis facere, sequi sunt totam libero error iure harum rem corrupti earum. Quasi officiis assumenda impedit eveniet illum inventore, nihil vitae! Porro recusandae, distinctio voluptate iste voluptatum inventore obcaecati amet, voluptatibus, vitae rerum ipsam ipsa dolor eaque nesciunt? 
+         <span><i class="fa-regular fa-user"></i>ciao</span>
+         <div>
+           <ul>
+              <li>
+               <h3>Professional</h3>
+              </li> 
+              <li>
+                <span>19,99&euro;</span>
+              </li>
+              <li>
+                <span>/mese</span>
+              </li>
+           </ul>
+         </div>
+
+         <div>
+           <ul>
+            <li><i></i>utente</li>
+            <li><i></i>3 Tb di spazio di archiviazione sicura</li>
+            <li><i></i>Funzioni di produttività premium e condivisione file semplice e sicura</li>
+           </ul>
+         </div>
+
+          <button class="button-blue">Prova gratis per 30 giorni</button>
+          <div>oppure <a href="#">acquista ora</a></div>
+
+          <div>
+            <ul>
+              <li><h4>Punti salienti del piano</h4></li>
+              <li><i></i>Invia file fino a 100gb con DropBox trasfert</li>
+              <li><i></i>Cartelle offline sui dispositivi mobili</li>
+              <li><i></i>Pulizia remota dell'account</li>
+              <li><i></i>Filigrana documento</li>
+              <li><i></i>Assistenza Prioritaria via email e chat</li>
+            </ul>
+          </div>
        </section> 
      </div>
      <div class="border">
